--- a/application-ops.properties
+++ b/application-ops.properties
@@ -1,3 +1,4 @@
+spring.application.name=villeops
 eureka.instance.prefer-ip-address=true
 eureka.client.serviceUrl.defaultZone=http://192.168.1.23:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${server.port}:${random.value}}
